@@ -1,3 +1,12 @@
+2010-07-11  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
+
+        Reviewed by Adam Barth.
+
+        [EFL] Fix style errors in ewk_private.h.
+        https://bugs.webkit.org/show_bug.cgi?id=41742
+
+        * efl/ewk/ewk_private.h:
+
 2010-07-09  Darin Adler  <darin@apple.com>
 
         * StringsNotToBeLocalized.txt: Updated for recent changes.
